fixed icons on small screens

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -44,13 +44,6 @@ body {
   width: 50px;
 }
 
-a:link,
-a:visited,
-a:hover,
-a:active {
-  text-decoration: none;
-}
-
 .margin-unset {
   margin: unset;
 }
